# python-project-83

./: .env_example  .gitignore  DEVLOG.md  Makefile  README.md  build.sh  database.sql  pyproject.toml
.github/workflows/: my_tests.yml  test_page_analizer.yml
page_analyzer/: __init__.py  app.py  check.py  parser.py  repository.py  validator.py
page_analyzer/templates/: base.html  footer.html  header.html  index.html
page_analyzer/templates/urls/: index.html  show_url.html
