[project]
authors = [
    {name = "Aleksandr Berezov", email = "berezov86@gmail.com"},
]
name = "hexlet-code"
version = "0.1.0"
description = "Study project - page analizer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "ruff>=0.12.11",
]
